--- a/fixture/default/core/Mage/Checkout/data/OnePageCheckout.yml
+++ b/fixture/default/core/Mage/Checkout/data/OnePageCheckout.yml
@@ -473,113 +473,6 @@ shipping_with_register_long_values: &shippingWithRegisterSpecialValues
     use_billing_address: No
 ################################################################################
 #                                                                              #
-#                                 Payment Card Data                            #
-#                                                                              #
-################################################################################
-
-front_saved_visa: &visaSavedCC
-    name_on_card: 'Test Account'
-    card_type: 'Visa'
-    card_number: '4000000000000002'
-    expiration_month: '07 - July'
-    expiration_year: '2020'
-    card_verification_number: '111'
-
-front_else_visa: &visaElse
-    card_type: 'Visa'
-    #card_number: '4832011527418035'
-    card_number: '4000000000000002'
-    expiration_month: '07 - July'
-    expiration_year: '2020'
-    card_verification_number: '111'
-
-front_else_visa_direct: &visaElseDirect
-    card_type: 'Visa'
-    card_number: '4832011527418035'
-    expiration_month: '01 - January'
-    expiration_year: '2013'
-    card_verification_number: '111'
-
-front_else_mastercard: &mastercardElse
-    card_type: 'MasterCard'
-    card_number: 5200000000000007
-    expiration_month: '07 - July'
-    expiration_year: '2020'
-    card_verification_number: '111'
-
-################################################################################
-#                                                                              #
-#                                 Payment Method                               #
-#                                                                              #
-################################################################################
-front_payment_checkmoney: &checkMoney
-    payment_method: Check / Money order
-
-front_payment_savedcc: &savedCCVisa
-    payment_method: Credit Card (saved)
-    payment_info: *visaSavedCC
-
-front_payment_paypaldirectuk: &paypalDirectUkMastercard
-    payment_method: PayPal Direct Payment Payflow Edition
-    payment_info: *mastercardElse
-
-front_payment_paypaldirect: &paypalDirectMastercard
-    payment_method: PayPal Direct Payment
-    payment_info: *visaElseDirect
-
-front_payment_payflowpro: &payfloProVisa
-    payment_method: Payflow Pro
-    payment_info: *visaElse
-
-front_payment_authorizenet: &authorizeNetVisa
-    payment_method: Credit Card (Authorize.net)
-    payment_info: *visaElse
-
-################################################################################
-#                                                                              #
-#                                 Shipping Method                              #
-#                                                                              #
-################################################################################
-front_shipping_flatrate: &flatRate
-    shipping_service: Flat Rate
-    shipping_method: Fixed
-
-front_shipping_free: &freeShipping
-    shipping_service: Free Shipping
-    shipping_method: Free
-
-front_shipping_ups: &ups
-    shipping_service: United Parcel Service
-    shipping_method: Ground
-
-front_shipping_upsxml: &upsXml
-    shipping_service: United Parcel Service XML
-    shipping_method: UPS Ground
-
-front_shipping_usps: &usps
-    shipping_service: United States Postal Service
-    shipping_method: Express Mail Flat Rate Envelope Hold For Pickup
-
-front_shipping_fedex: &fedex
-    shipping_service: Federal Express
-    shipping_method: Home Delivery
-
-front_shipping_dhl:
-    shipping_service: DHL
-    shipping_method: International Express
-
-# Data for a release after CE1.6.2
-#
-#front_shipping_dhl_usa: &dhl_usa
-#    shipping_service: DHL USA
-#    shipping_method: Express
-#
-#front_shipping_dhl_int: &dhl_int
-#    shipping_service: DHL
-#    shipping_method: Express easy
-
-################################################################################
-#                                                                              #
 #               Order Data for Signed In Customer                              #
 #                                                                              #
 ################################################################################
@@ -589,8 +482,11 @@ signedin_flatrate_checkmoney_different_address:
             general_name: %noValue%
     billing_address_data: *newBillingSignedInReqPhysical
     shipping_address_data: *newShippingSignedInReq
-    shipping_data: *flatRate
-    payment_data: *checkMoney
+    shipping_data:
+        shipping_service: Flat Rate
+        shipping_method: Fixed
+    payment_data:
+        payment_method: Check / Money order
 
 signedin_flatrate_checkmoney_use_billing_in_shipping:
     products_to_add:
@@ -600,8 +496,11 @@ signedin_flatrate_checkmoney_use_billing_in_shipping:
     shipping_address_data:
         shipping_address_choice: New Address
         use_billing_address: Yes
-    shipping_data: *flatRate
-    payment_data: *checkMoney
+    shipping_data:
+        shipping_service: Flat Rate
+        shipping_method: Fixed
+    payment_data:
+        payment_method: Check / Money order
 
 signedin_flatrate_checkmoney_long_address:
     products_to_add:
@@ -609,8 +508,11 @@ signedin_flatrate_checkmoney_long_address:
             general_name: %noValue%
     billing_address_data: *newBillingSignedInLongValues
     shipping_address_data: *newShippingSignedInLongValues
-    shipping_data: *flatRate
-    payment_data: *checkMoney
+    shipping_data:
+        shipping_service: Flat Rate
+        shipping_method: Fixed
+    payment_data:
+        payment_method: Check / Money order
 
 signedin_flatrate_checkmoney_special_address:
     products_to_add:
@@ -618,39 +520,52 @@ signedin_flatrate_checkmoney_special_address:
             general_name: %noValue%
     billing_address_data: *newBillingSignedInSpecialValues
     shipping_address_data: *newShippingSignedInSpecialValues
-    shipping_data: *flatRate
-    payment_data: *checkMoney
+    shipping_data:
+        shipping_service: Flat Rate
+        shipping_method: Fixed
+    payment_data:
+        payment_method: Check / Money order
 
 signedin_flatrate_checkmoney_virtual:
     products_to_add:
         product_1:
             general_name: %noValue%
     billing_address_data: *newBillingSignedInReqVirtual
-    payment_data: *checkMoney
+    payment_data:
+        payment_method: Check / Money order
 
 signedin_flatrate_checkmoney:
     products_to_add:
         product_1:
             general_name: %noValue%
     billing_address_data: *newBillingSignedInReqWithShippingUsa
-    shipping_data: *flatRate
-    payment_data: *checkMoney
+    shipping_data:
+        shipping_service: Flat Rate
+        shipping_method: Fixed
+    payment_data:
+        payment_method: Check / Money order
 
 signedin_flatrate_checkmoney_usa:
     products_to_add:
         product_1:
             general_name: %noValue%
     billing_address_data: *newBillingSignedInReqWithShippingUsa
-    shipping_data: *flatRate
-    payment_data: *checkMoney
+    shipping_data:
+        shipping_service: Flat Rate
+        shipping_method: Fixed
+    payment_data:
+        payment_method: Check / Money order
 
 signedin_flatrate_checkmoney_france:
     products_to_add:
         product_1:
             general_name: %noValue%
     billing_address_data: *newBillingSignedInReqWithShippingFrance
-    shipping_data: *flatRate
-    payment_data: *checkMoney
+    shipping_data:
+        shipping_service: Flat Rate
+        shipping_method: Fixed
+    payment_data:
+        payment_method: Check / Money order
 
 ################################################################################
 #                                                                              #
@@ -663,7 +578,8 @@ with_register_flatrate_checkmoney_virtual:
             general_name: %noValue%
     checkout_as_customer: *register
     billing_address_data: *billingWithRegisterReqVirtual
-    payment_data: *checkMoney
+    payment_data:
+        payment_method: Check / Money order
 
 with_register_flatrate_checkmoney: &withRegisterFlatrateCheck
     products_to_add:
@@ -671,8 +587,11 @@ with_register_flatrate_checkmoney: &withRegisterFlatrateCheck
             general_name: %noValue%
     checkout_as_customer: *register
     billing_address_data: *billingWithRegisterReqWithShipping
-    shipping_data: *flatRate
-    payment_data: *checkMoney
+    shipping_data:
+        shipping_service: Flat Rate
+        shipping_method: Fixed
+    payment_data:
+        payment_method: Check / Money order
 
 with_register_flatrate_checkmoney_usa:
     <<: *withRegisterFlatrateCheck
@@ -689,8 +608,11 @@ with_register_flatrate_checkmoney_different_address:
     checkout_as_customer: *register
     billing_address_data: *billingWithRegisterReq
     shipping_address_data: *newShippingSignedInReq
-    shipping_data: *flatRate
-    payment_data: *checkMoney
+    shipping_data:
+        shipping_service: Flat Rate
+        shipping_method: Fixed
+    payment_data:
+        payment_method: Check / Money order
 
 with_register_flatrate_checkmoney_long_address:
     products_to_add:
@@ -699,8 +621,11 @@ with_register_flatrate_checkmoney_long_address:
     checkout_as_customer: *register
     billing_address_data: *billingWithRegisterLongValues
     shipping_address_data: *shippingWithRegisterLongValues
-    shipping_data: *flatRate
-    payment_data: *checkMoney
+    shipping_data:
+        shipping_service: Flat Rate
+        shipping_method: Fixed
+    payment_data:
+        payment_method: Check / Money order
 
 with_register_flatrate_checkmoney_special_address:
     products_to_add:
@@ -709,8 +634,11 @@ with_register_flatrate_checkmoney_special_address:
     checkout_as_customer: *register
     billing_address_data: *billingWithRegisterSpecialValues
     shipping_address_data: *shippingWithRegisterSpecialValues
-    shipping_data: *flatRate
-    payment_data: *checkMoney
+    shipping_data:
+        shipping_service: Flat Rate
+        shipping_method: Fixed
+    payment_data:
+        payment_method: Check / Money order
 ################################################################################
 #                                                                              #
 #                           Order Data for Guest                               #
@@ -722,8 +650,11 @@ guest_flatrate_checkmoney: &guestFlatrateCheck
             general_name: %noValue%
     checkout_as_customer: *guest
     billing_address_data: *guestBillingReqWithShipping
-    shipping_data: *flatRate
-    payment_data: *checkMoney
+    shipping_data:
+        shipping_service: Flat Rate
+        shipping_method: Fixed
+    payment_data:
+        payment_method: Check / Money order
 
 guest_flatrate_checkmoney_usa:
     <<: *guestFlatrateCheck
@@ -739,7 +670,8 @@ guest_flatrate_checkmoney_virtual:
             general_name: %noValue%
     checkout_as_customer: *guest
     billing_address_data: *billingGuestReqVirtual
-    payment_data: *checkMoney
+    payment_data:
+        payment_method: Check / Money order
 
 ################################################################################
 #                                                                              #
@@ -752,7 +684,8 @@ exist_flatrate_checkmoney_virtual:
             general_name: %noValue%
     checkout_as_customer: *login
     billing_address_data: *newBillingSignedInReqVirtual
-    payment_data: *checkMoney
+    payment_data:
+        payment_method: Check / Money order
 
 exist_flatrate_checkmoney: &existFlatrateCheck
     products_to_add:
@@ -760,8 +693,11 @@ exist_flatrate_checkmoney: &existFlatrateCheck
             general_name: %noValue%
     checkout_as_customer: *login
     billing_address_data: *newBillingSignedInReqWithShippingUsa
-    shipping_data: *flatRate
-    payment_data: *checkMoney
+    shipping_data:
+        shipping_service: Flat Rate
+        shipping_method: Fixed
+    payment_data:
+        payment_method: Check / Money order
 
 exist_flatrate_checkmoney_usa:
     <<: *existFlatrateCheck
