[TESTS][DATA] removed payment and shipping data from SalesOrder.yml

--- a/fixture/default/core/Mage/Checkout/data/SalesOrder.yml
+++ b/fixture/default/core/Mage/Checkout/data/SalesOrder.yml
@@ -424,290 +424,6 @@ configurable_product_for_order:
             associated_search_sku: %associated_2%
         associated_configurable_3:
             associated_search_sku: %associated_3%
-
-#*********************************************
-#*          Credit Card Data                 *
-#*********************************************
-
-#<------------Saved CC------------>
-saved_empty_all:
-    name_on_card: ' '
-    card_type: ' '
-    card_number: ' '
-    expiration_month: ' '
-    expiration_year: ' '
-    card_verification_number: ' '
-
-saved_american_express: &americanExpressSavedCC
-    name_on_card: 'Test Account'
-    card_type: 'American Express'
-    card_number: '341111111111111'
-    expiration_month: '07 - July'
-    expiration_year: '2020'
-    card_verification_number: '1234'
-
-saved_visa: &visaSavedCC
-    name_on_card: 'Test Account'
-    card_type: 'Visa'
-    card_number: '4000000000000002'
-    expiration_month: '07 - July'
-    expiration_year: '2020'
-    card_verification_number: '111'
-
-saved_mastercard: &mastercardSavedCC
-    name_on_card: 'Test Account'
-    card_type: 'MasterCard'
-    card_number: 5200000000000007
-    expiration_month: '07 - July'
-    expiration_year: '2020'
-    card_verification_number: '111'
-
-saved_jcb: &jcbSavedCC
-    name_on_card: 'Test Account'
-    card_type: 'JCB'
-    card_number: '3000000000000004'
-    expiration_month: '07 - July'
-    expiration_year: '2020'
-    card_verification_number: '1234'
-
-saved_laser: &laserSavedCC
-    name_on_card: 'Test Account'
-    card_type: 'Laser'
-    card_number: '4024007127653'
-    expiration_month: '07 - July'
-    expiration_year: '2020'
-    card_verification_number: '111'
-
-saved_uatp: &uatpSavedCC
-    name_on_card: 'Test Account'
-    card_type: 'UATP'
-    card_number: '4024007127653'
-    expiration_month: '07 - July'
-    expiration_year: '2020'
-    card_verification_number: '111'
-
-saved_diners_club: &dinersClubSavedCC
-    name_on_card: 'Test Account'
-    card_type: 'Diners Club'
-    card_number: '30569309025904'
-    expiration_month: '07 - July'
-    expiration_year: '2020'
-    card_verification_number: '111'
-
-saved_switch_maestro: &switchMaestroSavedCC
-    name_on_card: 'Test Account'
-    card_type: 'Switch/Maestro'
-    card_number: '6759343422308233'
-    expiration_month: '01 - January'
-    expiration_year: '2013'
-    card_verification_number: '111'
-    issue_number: 1234
-    start_date_month: 12 - December
-    start_date_year: 2011
-
-saved_discover: &discoverSavedCC
-    name_on_card: 'Test Account'
-    card_type: 'Discover'
-    card_number: '6011000000000004'
-    expiration_month: '07 - July'
-    expiration_year: '2020'
-    card_verification_number: '111'
-
-saved_solo: &soloSavedCC
-    name_on_card: 'Test Account'
-    card_type: 'Solo'
-    card_number: '6767705369846419'
-    expiration_month: '07 - July'
-    expiration_year: '2020'
-    card_verification_number: '111'
-    issue_number:
-    start_date_month: 12 - December
-    start_date_year: 2012
-
-saved_enroute: &enrouteSavedCC
-    name_on_card: 'Test Account'
-    card_type: 'enRoute'
-    card_number: '6011000000000004'
-    expiration_month: '07 - July'
-    expiration_year: '2020'
-    card_verification_number: '111'
-
-saved_other: &otherSavedCC
-    name_on_card: 'Test Account'
-    card_type: 'Other'
-    card_number: '6011000000000004'
-    expiration_month: '07 - July'
-    expiration_year: '2020'
-    card_verification_number: '111'
-
-#<------------ELSE------------>
-else_american_express: &americanExpressElse
-    card_type: 'American Express'
-    card_number: '371449635398431'
-    #card_number: '341111111111111' #not work with payfloPro without3D
-    expiration_month: '07 - July'
-    expiration_year: '2020'
-    card_verification_number: '1234'
-
-else_american_express_direct:
-    card_type: 'American Express'
-    card_number: '340000000000009'
-    expiration_month: '01 - January'
-    expiration_year: '2013'
-    card_verification_number: '1234'
-
-else_visa: &visaElse
-    card_type: 'Visa'
-    card_number: '4000000000000002'
-    #card_number: '4832011527418035' #not work with payfloPro without3D
-    expiration_month: '07 - July'
-    expiration_year: '2020'
-    card_verification_number: '111'
-
-else_visa_direct:
-    card_type: 'Visa'
-    card_number: '4832011527418035'
-    expiration_month: '01 - January'
-    expiration_year: '2013'
-    card_verification_number: '111'
-
-else_mastercard: &mastercardElse
-    card_type: 'MasterCard'
-    card_number: 5200000000000007
-    expiration_month: '07 - July'
-    expiration_year: '2020'
-    card_verification_number: '111'
-
-else_discover: &discoverElse
-    card_type: 'Discover'
-    card_number: '6011000990139424'
-    #card_number: '6011000000000004' #not work with payfloPro without3D
-    expiration_month: '07 - July'
-    expiration_year: '2020'
-    card_verification_number: '111'
-
-else_discover_direct:
-    card_type: 'Discover'
-    card_number: '6011000000000004'
-    expiration_month: '01 - January'
-    expiration_year: '2013'
-    card_verification_number: '111'
-
-else_other: &otherElse
-    card_type: 'Other'
-    card_number: '6011000000000004'
-    expiration_month: '07 - July'
-    expiration_year: '2020'
-    card_verification_number: '111'
-
-else_jcb: &jcbElse
-    card_type: 'JCB'
-    card_number: 3566002020360505
-    #card_number: '3000000000000004'
-    expiration_month: '07 - July'
-    expiration_year: '2020'
-    card_verification_number: '1234'
-
-else_jcb_3d: &jcbElse3D
-    card_type: 'JCB'
-    #card_number: '3000000000000004' is not working even according to 3D secure checklist
-    card_number: '3566002020360505'
-    #expiration_month: '07 - July' is not working. to get eciflag 07 and no errors month should be 01 - January
-    expiration_month: '01 - January'
-    #expiration_year: '2020' is not working. year should be current year + 1
-    expiration_year: '2013'
-    card_verification_number: '1234'
-
-else_solo: &soloElse
-    card_type: 'Solo'
-    card_number: '6767661395122343'
-    expiration_month: '01 - January'
-    expiration_year: '2013'
-    card_verification_number: '111'
-    issue_number: 1234
-    start_date_month: 12 - December
-    start_date_year: 2011
-
-else_switch_maestro: &switchMaestroElse
-    card_type: 'Switch/Maestro'
-    card_number: '6759343422308233'
-    #card_number: '4024007127653'
-    expiration_month: '01 - January'
-    expiration_year: '2013'
-    card_verification_number: '111'
-    issue_number: 1234
-    start_date_month: 12 - December
-    start_date_year: 2011
-
-#*********************************************
-#*              Payment Data                 *
-#*********************************************
-
-payment_check_money: &checkMoney
-    payment_method: Check / Money order
-
-payment_saved_cc_visa: &savedCCVisa
-    payment_method: Credit Card (saved)
-    payment_info: *visaSavedCC
-
-payment_paypal_direct_uk: &paypalDirectUkMastercard
-    payment_method: PayPal Direct Payment Payflow Edition
-    payment_info: *mastercardElse
-
-payment_paypal_direct: &paypalDirectMastercard
-    payment_method: PayPal Direct Payment
-    payment_info: *mastercardElse
-
-payment_payflo_pro: &payfloProVisa
-    payment_method: Payflow Pro
-    payment_info: *visaElse
-
-payment_authorize: &authorizeNetVisa
-    payment_method: Credit Card (Authorize.net)
-    payment_info: *visaElse
-
-#*********************************************
-#*             Shipping Data                 *
-#*********************************************
-
-shipping_flatrate: &flatRate
-    shipping_service: Flat Rate
-    shipping_method: Fixed
-
-shipping_free: &freeShipping
-    shipping_service: Free Shipping
-    shipping_method: Free
-
-shipping_ups: &ups
-    shipping_service: United Parcel Service
-    shipping_method: Ground
-
-shipping_upsxml: &upsXml
-    shipping_service: United Parcel Service XML
-    shipping_method: Ground
-
-shipping_usps: &usps
-    shipping_service: United States Postal Service
-    shipping_method: Express Mail
-
-shipping_fedex: &fedex
-    shipping_service: Federal Express
-    shipping_method: Home Delivery
-
-shipping_dhl:
-    shipping_service: DHL
-    shipping_method: International Express
-
-# Data for a release after CE1.6.2
-#
-#shipping_dhl_usa: &dhl_usa
-#    shipping_service: DHL USA
-#    shipping_method: Express
-#
-#shipping_dhl_int: &dhl_int
-#    shipping_service: DHL
-#    shipping_method: Express easy
-
 #*********************************************
 #*      ConfigurableOptions For Products     *
 #*********************************************
@@ -983,103 +699,16 @@ order_newcustomer_checkmoney_flatrate_usa: &orderNewCustomerCheckFlatrateUsa
         coupon_1: %noValue%
     billing_addr_data: *billingReqUsa
     shipping_addr_data: *shippingSameAsBilling
-    payment_data: *checkMoney
-    shipping_data: *flatRate
+    payment_data:
+        payment_method: Check / Money order
+    shipping_data:
+        shipping_service: Flat Rate
+        shipping_method: Fixed
     gift_messages: %noValue%
 
 order_newcustomer_checkmoney_flatrate_france:
     <<: *orderNewCustomerCheckFlatrateUsa
     billing_addr_data: *billingReqFrance
-
-#<------------New Customer, Saved CC, FlatRate, ShippingSameAsBilling------------>
-order_newcustomer_savedcc_flatrate:
-    store_view: Default Store View
-    account_data:
-        customer_group: General
-        customer_email: %noValue%
-    products_to_add:
-        product_1: &product
-            filter_sku: %noValue%
-            product_qty: %noValue%
-        product_2: %noValue%
-    coupons:
-        coupon_1: %noValue%
-    billing_addr_data: *billingReqUsa
-    shipping_addr_data: *shippingSameAsBilling
-    payment_data: *savedCCVisa
-    shipping_data: *flatRate
-
-#<------------New Customer, PaypalDirectUk, FlatRate, ShippingSameAsBilling------------>
-order_newcustomer_paypaldirectuk_flatrate:
-    store_view: Default Store View
-    account_data:
-        customer_group: General
-        customer_email: %noValue%
-    products_to_add:
-        product_1: &product
-            filter_sku: %noValue%
-            product_qty: %noValue%
-        product_2: %noValue%
-    coupons:
-        coupon_1: %noValue%
-    billing_addr_data: *billingReqUsa
-    shipping_addr_data: *shippingSameAsBilling
-    payment_data: *paypalDirectUkMastercard
-    shipping_data: *flatRate
-
-#<------------New Customer, PaypalDirect, FlatRate, ShippingSameAsBilling------------>
-order_newcustomer_paypaldirect_flatrate:
-    store_view: Default Store View
-    account_data:
-        customer_group: General
-        customer_email: %noValue%
-    products_to_add:
-        product_1: &product
-            filter_sku: %noValue%
-            product_qty: %noValue%
-        product_2: %noValue%
-    coupons:
-        coupon_1: %noValue%
-    billing_addr_data: *billingReqUsa
-    shipping_addr_data: *shippingSameAsBilling
-    payment_data: *paypalDirectMastercard
-    shipping_data: *flatRate
-
-#<------------New Customer, PayflowPro, FlatRate, ShippingSameAsBilling------------>
-order_newcustomer_payflowpro_flatrate:
-    store_view: Default Store View
-    account_data:
-        customer_group: General
-        customer_email: %noValue%
-    products_to_add:
-        product_1: &product
-            filter_sku: %noValue%
-            product_qty: %noValue%
-        product_2: %noValue%
-    coupons:
-        coupon_1: %noValue%
-    billing_addr_data: *billingReqUsa
-    shipping_addr_data: *shippingSameAsBilling
-    payment_data: *payfloProVisa
-    shipping_data: *flatRate
-
-#<------------New Customer, Authorize.net, FlatRate, ShippingSameAsBilling------------>
-order_newcustomer_authorizenet_flatrate:
-    store_view: Default Store View
-    account_data:
-        customer_group: General
-        customer_email: %noValue%
-    products_to_add:
-        product_1: &product
-            filter_sku: %noValue%
-            product_qty: %noValue%
-        product_2: %noValue%
-    coupons:
-        coupon_1: %noValue%
-    billing_addr_data: *billingReqUsa
-    shipping_addr_data: *shippingSameAsBilling
-    payment_data: *authorizeNetVisa
-    shipping_data: *flatRate
 
 #*********************************************
 #*           INVOICE DATA                    *
