--- a/fixture/default/core/Mage/Checkout/data/Payment.yml
+++ b/fixture/default/core/Mage/Checkout/data/Payment.yml
@@ -29,11 +29,19 @@
 #*          Credit Card Data                 *
 #*********************************************
 #<------------Saved CC------------>
-saved_american_express: &americanExpressSavedCC
+saved_empty_all:
+    name_on_card: ' '
+    card_type: ' '
+    card_number: ' '
+    expiration_month: ' '
+    expiration_year: ' '
+    card_verification_number: ' '
+
+saved_american_express:
     name_on_card: 'Test Account'
     card_type: 'American Express'
     card_number: '341111111111111'
-    expiration_month: '07 - July'
+    expiration_month: '01 - January'
     expiration_year: '2013'
     card_verification_number: '1234'
 
@@ -41,51 +49,51 @@ saved_visa: &visaSavedCC
     name_on_card: 'Test Account'
     card_type: 'Visa'
     card_number: '4000000000000002'
-    expiration_month: '07 - July'
+    expiration_month: '01 - January'
     expiration_year: '2013'
     card_verification_number: '111'
 
-saved_mastercard: &mastercardSavedCC
+saved_mastercard:
     name_on_card: 'Test Account'
     card_type: 'MasterCard'
-    card_number: 5200000000000007
-    expiration_month: '07 - July'
+    card_number: '5200000000000015'
+    expiration_month: '01 - January'
     expiration_year: '2013'
     card_verification_number: '111'
 
-saved_jcb: &jcbSavedCC
+saved_jcb:
     name_on_card: 'Test Account'
     card_type: 'JCB'
     card_number: '3000000000000004'
-    expiration_month: '07 - July'
+    expiration_month: '01 - January'
     expiration_year: '2013'
     card_verification_number: '1234'
 
-saved_laser: &laserSavedCC
+saved_laser:
     name_on_card: 'Test Account'
     card_type: 'Laser'
     card_number: '4024007127653'
-    expiration_month: '07 - July'
+    expiration_month: '01 - January'
     expiration_year: '2013'
     card_verification_number: '111'
 
-saved_uatp: &uatpSavedCC
+saved_uatp:
     name_on_card: 'Test Account'
     card_type: 'UATP'
     card_number: '4024007127653'
-    expiration_month: '07 - July'
+    expiration_month: '01 - January'
     expiration_year: '2013'
     card_verification_number: '111'
 
-saved_diners_club: &dinersClubSavedCC
+saved_diners_club:
     name_on_card: 'Test Account'
     card_type: 'Diners Club'
     card_number: '30569309025904'
-    expiration_month: '07 - July'
+    expiration_month: '01 - January'
     expiration_year: '2013'
     card_verification_number: '111'
 
-saved_switch_maestro: &switchMaestroSavedCC
+saved_switch_maestro:
     name_on_card: 'Test Account'
     card_type: 'Switch/Maestro'
     card_number: '6759343422308233'
@@ -96,46 +104,47 @@ saved_switch_maestro: &switchMaestroSavedCC
     start_date_month: 12 - December
     start_date_year: 2011
 
-saved_discover: &discoverSavedCC
+saved_discover:
     name_on_card: 'Test Account'
     card_type: 'Discover'
     card_number: '6011000000000004'
-    expiration_month: '07 - July'
+    expiration_month: '01 - January'
     expiration_year: '2013'
     card_verification_number: '111'
 
-saved_solo: &soloSavedCC
+saved_solo:
     name_on_card: 'Test Account'
     card_type: 'Solo'
     card_number: '6767705369846419'
-    expiration_month: '07 - July'
+    expiration_month: '01 - January'
     expiration_year: '2013'
     card_verification_number: '111'
     issue_number:
     start_date_month: 12 - December
     start_date_year: 2012
 
-saved_enroute: &enrouteSavedCC
+saved_enroute:
     name_on_card: 'Test Account'
     card_type: 'enRoute'
     card_number: '6011000000000004'
-    expiration_month: '07 - July'
+    expiration_month: '01 - January'
     expiration_year: '2013'
     card_verification_number: '111'
 
-saved_other: &otherSavedCC
+saved_other:
     name_on_card: 'Test Account'
     card_type: 'Other'
     card_number: '6011000000000004'
-    expiration_month: '07 - July'
+    expiration_month: '01 - January'
     expiration_year: '2013'
     card_verification_number: '111'
 
 #<------------ELSE------------>
-else_american_express: &americanExpressElse
+else_american_express:
     card_type: 'American Express'
     card_number: '371449635398431'
-    expiration_month: '07 - July'
+    #card_number: '341111111111111' #not work with payfloPro without3D
+    expiration_month: '01 - January'
     expiration_year: '2013'
     card_verification_number: '1234'
 
@@ -149,7 +158,8 @@ else_american_express_direct:
 else_visa: &visaElse
     card_type: 'Visa'
     card_number: '4000000000000002'
-    expiration_month: '07 - July'
+    #card_number: '4832011527418035' #not work with payfloPro without3D
+    expiration_month: '01 - January'
     expiration_year: '2013'
     card_verification_number: '111'
 
@@ -162,15 +172,16 @@ else_visa_direct:
 
 else_mastercard: &mastercardElse
     card_type: 'MasterCard'
-    card_number: 5200000000000007
-    expiration_month: '07 - July'
+    card_number: '5200000000000015'
+    expiration_month: '01 - January'
     expiration_year: '2013'
     card_verification_number: '111'
 
-else_discover: &discoverElse
+else_discover:
     card_type: 'Discover'
     card_number: '6011000990139424'
-    expiration_month: '07 - July'
+    #card_number: '6011000000000004' #not work with payfloPro without3D
+    expiration_month: '01 - January'
     expiration_year: '2013'
     card_verification_number: '111'
 
@@ -181,46 +192,49 @@ else_discover_direct:
     expiration_year: '2013'
     card_verification_number: '111'
 
-else_other: &otherElse
+else_other:
     card_type: 'Other'
     card_number: '6011000000000004'
-    expiration_month: '07 - July'
+    expiration_month: '01 - January'
     expiration_year: '2013'
     card_verification_number: '111'
 
 else_jcb: &jcbElse
     card_type: 'JCB'
-    card_number: 3566002020360505
-    expiration_month: '07 - July'
+    card_number: '3566002020360505'
+    #card_number: '3000000000000004'
+    expiration_month: '01 - January'
     expiration_year: '2013'
     card_verification_number: '1234'
 
-else_jcb_3d: &jcbElse3D
+else_jcb_3d:
     card_type: 'JCB'
+    #card_number: '3000000000000004' is not working even according to 3D secure checklist
     card_number: '3566002020360505'
     expiration_month: '01 - January'
     expiration_year: '2013'
     card_verification_number: '1234'
 
-else_solo: &soloElse
+else_solo:
     card_type: 'Solo'
     card_number: '6767661395122343'
     expiration_month: '01 - January'
     expiration_year: '2013'
     card_verification_number: '111'
-    issue_number: 1234
-    start_date_month: 12 - December
-    start_date_year: 2011
+    issue_number: '1234'
+    start_date_month: '12 - December'
+    start_date_year: '2011'
 
-else_switch_maestro: &switchMaestroElse
+else_switch_maestro:
     card_type: 'Switch/Maestro'
     card_number: '6759343422308233'
+    #card_number: '4024007127653'
     expiration_month: '01 - January'
     expiration_year: '2013'
     card_verification_number: '111'
-    issue_number: 1234
-    start_date_month: 12 - December
-    start_date_year: 2011
+    issue_number: '1234'
+    start_date_month: '12 - December'
+    start_date_year: '2011'
 
 #*********************************************
 #*              Payment Data                 *
