[UIMAP][TESTS] MAUTOSEL-407 Fix for CmsPolls

--- a/fixture/default/core/Mage/Home/uimap/frontend/AboutUs.yml
+++ b/fixture/default/core/Mage/Home/uimap/frontend/AboutUs.yml
@@ -28,6 +28,7 @@
 #
 about_us:
     mca: about-magento-demo-store
+    click_xpath: //div[@class='footer']//a[text()='About Us']
     title: About Us
     uimap:
         form:
