[UIMAP] Fixed MAUTOSEL-419: Fixed UIMaps for MyAccount and Product

--- a/fixture/enterprise/core/Mage/Customer/uimap/frontend/MyAccount.yml
+++ b/fixture/enterprise/core/Mage/Customer/uimap/frontend/MyAccount.yml
@@ -31,5 +31,8 @@ customer_account:
         form:
             fieldsets:
                 -
+                    my_recent_tags:
+                        xpath: //div[@class='tags']
+                -
                     my_recent_reviews:
                         xpath: //div[@class='reviews']
