--- a/fixture/default/core/Mage/Wishlist/uimap/frontend/Wishlist.yml
+++ b/fixture/default/core/Mage/Wishlist/uimap/frontend/Wishlist.yml
@@ -165,7 +165,7 @@ wishlist_configure_product:
             specify_product_link: //li[normalize-space(@class)='notice-msg' and contains(.,"Please specify product link(s).")]
             specify_product_option: //li[normalize-space(@class)='notice-msg' and contains(.,"Please select options for product.")]
             specify_product_quantity: //li[normalize-space(@class)='notice-msg' and contains(.,"Please specify the quantity of product(s).")]
-            specify_product_required_option: //li[normalize-space(@class)='notice-msg' and contains(.,"Please specify the product required option(s).")]
+            specify_product_required_option: //li[normalize-space(@class)='notice-msg' and contains(.,"Please specify the product's required option(s).")]
 
 share_wishlist:
     mca: wishlist/index/share/
