--- a/fixture/default/core/Mage/CatalogPriceRule/uimap/admin/CatalogPriceRule.yml
+++ b/fixture/default/core/Mage/CatalogPriceRule/uimap/admin/CatalogPriceRule.yml
@@ -51,6 +51,7 @@ manage_catalog_price_rules:
                             filter_date_expired_to: //input[@name='to_date[to]']
                         pageelements:
                             grid_head: //div[@id='promo_catalog_grid']//tr[@class='headings']
+                            price_rule: //table[@id]/tbody/tr
         buttons:
             add_new_rule: //button[span='Add New Rule']
             apply_rules: //button[span='Apply Rules']
@@ -65,6 +66,7 @@ manage_catalog_price_rules:
             invalid_sub_discount_amount: "//div[@id='advice-validate-not-negative-number-rule_sub_discount_amount' and not(contains(@style,'display: none;'))]"
             empty_required_field: "//div[@id='advice-required-entry-%fieldId%' and not(contains(@style,'display: none;'))]"
             confirmation_for_delete: Are you sure you want to do this?
+            no_price_rules: //*[@id='promo_catalog_grid_table']//tr[td='No records found.']
 
 add_new_rule:
     mca: promo_catalog/new/
