--- a/fixture/default/core/Mage/CmsPoll/uimap/admin/CmsPoll.yml
+++ b/fixture/default/core/Mage/CmsPoll/uimap/admin/CmsPoll.yml
@@ -60,7 +60,7 @@ poll_manager:
             success_deleted_poll: //li[normalize-space(@class)='success-msg' and contains(.,'The poll has been deleted.')]
             empty_required_field: "//div[@id='advice-required-entry-%fieldId%' and not(contains(@style,'display: none;'))]"
             existing_poll: //li[normalize-space(@class)='error-msg' and contains(.,'Poll with the same question already exists.')]
-            dublicate_poll_answer: //li[normalize-space(@class)='error-msg' and contains(.,'Your answers contain duplicates.')]
+            duplicate_poll_answer: //li[normalize-space(@class)='error-msg' and contains(.,'Your answers contain duplicates.')]
             add_answers: //li[normalize-space(@class)='error-msg' and contains(.,'Please, add some answers to this poll first.')]
             confirmation_for_delete: Are you sure you want to do this?
 
